--- a/.travis.yml
+++ b/.travis.yml
@@ -9,17 +9,18 @@ sudo: required
 
 env:
   global:
-  - PGPORT=5432
+  - PGPORT=5433
   - PGHOST=localhost
-  - DATABASE=postgres://postgres@localhost:5432/postgres
+  - DATABASE=postgres://postgres@localhost:5433/aiotpt
 
-# services:
-#  - postgresql
-#
+services:
+  - postgresql
+
 # addons:
 #   postgresql: "9.5"
 #
 # before_script:
+#   - psql -U postgres -c 'create database aiotpt;'
 #   - psql -f schema.sql -U postgres
 
 addons:
@@ -34,7 +35,7 @@ addons:
 before_script:
   - sudo cp /etc/postgresql/9.4/main/pg_hba.conf /etc/postgresql/9.5/main/pg_hba.conf
   - sudo /etc/init.d/postgresql restart
-  - psql -U postgres -c 'create database "postgres";'
+  - psql -U postgres -c 'create database aiotpt;'
   - psql -f schema.sql
 
 install:
