Updated requirements; Added travis badge to README; Pass some fancy flags to pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_script:
 
 install:
   - pip install -r requirements.txt
+  - pip install pytest-travis-fold
 
 script:
-  - py.test
+  - py.test -v --color=yes --exitfirst --showlocals --durations=5
