Create main schema

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -1,8 +1,10 @@
-# [core]
-	engine = pg
-	# plan_file = sqitch.plan
-	# top_dir = .
-# [engine "pg"]
-  # target = db:pg:
-  # registry = sqitch
-  # client = psql
+[core]
+  engine = pg
+  plan_file = sqitch.plan
+  top_dir = .
+[engine "pg"]
+  target = dev
+  registry = sqitch
+  client = psql
+[target "dev"]
+  uri = db:pg://postgres@localhost:5432/aiotpt_dev
