--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ addons:
 
 install:
   # Install Sqitch
-  - cpanm --verbose --no-interactive --no-man-pages --notest --skip-satisfied --force App::Sqitch
+  - sudo cpanm --verbose --no-interactive --no-man-pages --notest --skip-satisfied --force App::Sqitch
   # Install aiotpt dependencies
   - pip install -r requirements.txt
   - pip install pytest-travis-fold
