--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ addons:
   postgresql: 9.5
 
 install:
-  # Install Sqitch
-  - sudo cpanm --quiet --no-interactive --no-man-pages --notest --skip-satisfied --force App::Sqitch
+  # Install Sqitch and dependencies
+  - sudo cpanm --quiet --no-interactive --no-man-pages --notest --skip-satisfied --force App::Sqitch DBD::Pg
   # Install aiotpt dependencies
   - pip install -r requirements.txt
   - pip install pytest-travis-fold
